@@ -17,6 +17,7 @@ import org.elasticsearch.action.admin.cluster.allocation.TransportClusterAllocat
 import org.elasticsearch.action.admin.cluster.allocation.TransportGetDesiredBalanceAction;
 import org.elasticsearch.action.admin.cluster.node.usage.NodeUsageStatsForThreadPoolsAction;
 import org.elasticsearch.action.admin.cluster.node.usage.TransportNodeUsageStatsForThreadPoolsAction;
+import org.elasticsearch.action.admin.indices.recovery.ShardRecoveryInfo;
 import org.elasticsearch.action.admin.indices.stats.CommonStats;
 import org.elasticsearch.action.admin.indices.stats.IndicesStatsAction;
 import org.elasticsearch.action.admin.indices.stats.ShardStats;
@@ -48,6 +49,7 @@ import org.elasticsearch.index.shard.IndexingStats;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.index.shard.ShardPath;
 import org.elasticsearch.index.store.StoreStats;
+import org.elasticsearch.indices.recovery.RecoveryState;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.plugins.PluginsService;
 import org.elasticsearch.telemetry.Measurement;
@@ -620,7 +622,25 @@ public class WriteLoadConstraintDeciderIT extends ESIntegTestCase {
         ).sorted(comparator).toList();
 
         // The moved shard should be at the head of the sorted list
-        assertThat(movedShardId, equalTo(bestShardsToMove.get(0).shardId().id()));
+        assertThat(movedShardId, equalTo(bestShardsToMove.getFirst().shardId().id()));
+
+        // Assert that the moved shard was recovered with priority RELOCATION_CAN_REMAIN_NOT_PREFERRED:
+        List<RecoveryState> recoveryStatesForMovedShard = admin().indices()
+            .prepareRecoveries(harness.indexName)
+            .get()
+            .shardRecoveryInfos()
+            .get(harness.indexName)
+            .stream()
+            .map(ShardRecoveryInfo::recoveryState)
+            .filter(state -> state.getShardId().id() == movedShardId)
+            // We're interesting on the recovery after the move to the second or third node, not the initial creation on the first node:
+            .filter(state -> !state.getTargetNode().getId().equals(harness.firstDataNodeId))
+            .toList();
+        assertThat(recoveryStatesForMovedShard.size(), equalTo(1));
+        assertThat(
+            recoveryStatesForMovedShard.getFirst().getRecoveryPriority(),
+            equalTo(ShardRouting.RecoveryPriority.RELOCATION_CAN_REMAIN_NOT_PREFERRED)
+        );
     }
 
     public void testMaxQueueLatencyMetricIsPublished() {
@@ -769,7 +789,7 @@ public class WriteLoadConstraintDeciderIT extends ESIntegTestCase {
             .addRequestHandlingBehavior(
                 TransportNodeUsageStatsForThreadPoolsAction.NAME + "[n]",
                 (handler, request, channel, task) -> channel.sendResponse(
-                    new NodeUsageStatsForThreadPoolsAction.NodeResponse(node, nodeUsageStats)
+                    new NodeUsageStatsForThreadPoolsAction.NodeResponse(node, nodeUsageStats, Map.of())
                 )
             );
     }
@@ -836,6 +856,8 @@ public class WriteLoadConstraintDeciderIT extends ESIntegTestCase {
                 WriteLoadConstraintSettings.WRITE_LOAD_DECIDER_QUEUE_LATENCY_THRESHOLD_SETTING.getKey(),
                 TimeValue.timeValueMillis(queueLatencyThresholdMillis)
             )
+            // Disable minimum shard write load for simplicity
+            .put(WriteLoadConstraintSettings.WRITE_LOAD_DECIDER_HOTSPOT_MIN_SHARD_WRITE_LOAD_THRESHOLD_SETTING.getKey(), "-1")
             // Disable rebalancing so that testing can see Decider change outcomes only.
             .put(EnableAllocationDecider.CLUSTER_ROUTING_REBALANCE_ENABLE_SETTING.getKey(), "none")
             .build();
@@ -927,7 +949,8 @@ public class WriteLoadConstraintDeciderIT extends ESIntegTestCase {
             true,
             RecoverySource.EmptyStoreRecoverySource.INSTANCE,
             new UnassignedInfo(UnassignedInfo.Reason.INDEX_CREATED, null),
-            ShardRouting.Role.DEFAULT
+            ShardRouting.Role.DEFAULT,
+            ShardRouting.RecoveryPriority.UNASSIGNED_NEW_PRIMARY
         );
         shardRouting = shardRouting.initialize(assignedShardNodeId, null, ShardRouting.UNAVAILABLE_EXPECTED_SHARD_SIZE);
         shardRouting = shardRouting.moveToStarted(ShardRouting.UNAVAILABLE_EXPECTED_SHARD_SIZE);
